--- a/mnist.ipynb
+++ b/mnist.ipynb
@@ -1,1 +1,154 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"mnist.ipynb","private_outputs":true,"provenance":[],"authorship_tag":"ABX9TyO4CBdoDzWmXu5rRU7I4lTs"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","metadata":{"id":"QH1iZIA_XMP1"},"source":["[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"],"execution_count":null,"outputs":[]},{"cell_type":"markdown","metadata":{"id":"881Fay6pXR4i"},"source":["<a href=\"https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb\">\n","  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n","</a>"]},{"cell_type":"markdown","metadata":{"id":"LnhCkpkWU2xo"},"source":["# MNIST demo"]},{"cell_type":"code","metadata":{"id":"Rk_9BqDnL4SH"},"source":["from typing import List\n","\n","import matplotlib.pyplot as plt\n","import torch\n","from sklearn import datasets\n","from sklearn.model_selection import train_test_split\n","# import numpy as np\n","from torch import nn, optim\n","\n","digits_data = datasets.load_digits()\n","\n","n_img = 10\n","# plt.figure(figsize=(10, 4))\n","# for i in range(n_img):\n","#    ax = plt.subplot(2, 5, i + 1)\n","#    plt.imshow(digits_data.data[i].reshape(8, 8), cmap=\"Greys_r\")\n","#    ax.get_xaxis().set_visible(False)\n","#    ax.get_yaxis().set_visible(False)\n","# plt.show()\n","\n","print(f\"shape = {digits_data.data.shape}\")\n","print(f\"label: {digits_data.target[:n_img]}\")\n","\n","\n","digit_images = digits_data.data\n","labels = digits_data.target\n","x_train, x_test, t_train, t_test = train_test_split(digit_images, labels)\n","\n","x_train = torch.tensor(x_train, dtype=torch.float32)\n","t_train = torch.tensor(t_train, dtype=torch.int64)\n","x_test = torch.tensor(x_test, dtype=torch.float32)\n","t_test = torch.tensor(t_test, dtype=torch.int64)\n","\n","\n","net = nn.Sequential(\n","    nn.Linear(64, 32),\n","    nn.ReLU(),\n","    nn.Linear(32, 16),\n","    nn.ReLU(),\n","    nn.Linear(16, 10),\n",")\n","print(net)\n","\n","loss_fnc = nn.CrossEntropyLoss()\n","\n","optimizer = optim.SGD(net.parameters(), lr=0.01)\n","\n","record_loss_train: List[float] = []\n","record_loss_test: List[float] = []\n","\n","epochs = 1000\n","\n","for i in range(epochs):\n","    optimizer.zero_grad()\n","\n","    y_train = net(x_train)\n","    y_test = net(x_test)\n","\n","    loss_train = loss_fnc(y_train, t_train)\n","    loss_test = loss_fnc(y_test, t_test)\n","    record_loss_train.append(loss_train.item())\n","    record_loss_test.append(loss_test.item())\n","\n","    loss_train.backward()\n","\n","    optimizer.step()\n","\n","    if i % 100 == 0:\n","        print(f\"Epoch: {i}, Loss_Train: {loss_train}, Loss_Test: {loss_test}\")\n","\n","plt.plot(range(len(record_loss_train)), record_loss_train, label=\"Train\")\n","plt.plot(range(len(record_loss_test)), record_loss_test, label=\"Test\")\n","plt.legend()\n","\n","plt.xlabel(\"Epochs\")\n","plt.ylabel(\"Error\")\n","plt.show()\n","\n","y_test = net(x_test)\n","count = (y_test.argmax(1) == t_test).sum().item()\n","print(f\"correct rate: {count/len(y_test)*100}%\")\n","\n","img_id = 0\n","x_pred = digit_images[img_id]\n","print(\"type\", type(x_pred))\n","image = x_pred.reshape(8, 8)\n","plt.imshow(image, cmap=\"Greys_r\")\n","plt.show()\n","\n","x_pred = torch.tensor(x_pred, dtype=torch.float32)\n","y_pred = net(x_pred)\n","print(f\"answer: {labels[img_id]}, prediction: {y_pred.argmax().item()}\")"],"execution_count":null,"outputs":[]},{"cell_type":"code","metadata":{"id":"9GCFPhryU2LI"},"source":[""],"execution_count":null,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "mnist.ipynb",
+      "private_outputs": true,
+      "provenance": [],
+      "authorship_tag": "ABX9TyOikn8led97kME0vkMr1wn0",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MasaYan24/lecture_2021_phys_gakushuin/blob/main/mnist.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LnhCkpkWU2xo"
+      },
+      "source": [
+        "# MNIST demo"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rk_9BqDnL4SH"
+      },
+      "source": [
+        "from typing import List\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import torch\n",
+        "from sklearn import datasets\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "# import numpy as np\n",
+        "from torch import nn, optim\n",
+        "\n",
+        "digits_data = datasets.load_digits()\n",
+        "\n",
+        "n_img = 10\n",
+        "# plt.figure(figsize=(10, 4))\n",
+        "# for i in range(n_img):\n",
+        "#    ax = plt.subplot(2, 5, i + 1)\n",
+        "#    plt.imshow(digits_data.data[i].reshape(8, 8), cmap=\"Greys_r\")\n",
+        "#    ax.get_xaxis().set_visible(False)\n",
+        "#    ax.get_yaxis().set_visible(False)\n",
+        "# plt.show()\n",
+        "\n",
+        "print(f\"shape = {digits_data.data.shape}\")\n",
+        "print(f\"label: {digits_data.target[:n_img]}\")\n",
+        "\n",
+        "\n",
+        "digit_images = digits_data.data\n",
+        "labels = digits_data.target\n",
+        "x_train, x_test, t_train, t_test = train_test_split(digit_images, labels)\n",
+        "\n",
+        "x_train = torch.tensor(x_train, dtype=torch.float32)\n",
+        "t_train = torch.tensor(t_train, dtype=torch.int64)\n",
+        "x_test = torch.tensor(x_test, dtype=torch.float32)\n",
+        "t_test = torch.tensor(t_test, dtype=torch.int64)\n",
+        "\n",
+        "\n",
+        "net = nn.Sequential(\n",
+        "    nn.Linear(64, 32),\n",
+        "    nn.ReLU(),\n",
+        "    nn.Linear(32, 16),\n",
+        "    nn.ReLU(),\n",
+        "    nn.Linear(16, 10),\n",
+        ")\n",
+        "print(net)\n",
+        "\n",
+        "loss_fnc = nn.CrossEntropyLoss()\n",
+        "\n",
+        "optimizer = optim.SGD(net.parameters(), lr=0.01)\n",
+        "\n",
+        "record_loss_train: List[float] = []\n",
+        "record_loss_test: List[float] = []\n",
+        "\n",
+        "epochs = 1000\n",
+        "\n",
+        "for i in range(epochs):\n",
+        "    optimizer.zero_grad()\n",
+        "\n",
+        "    y_train = net(x_train)\n",
+        "    y_test = net(x_test)\n",
+        "\n",
+        "    loss_train = loss_fnc(y_train, t_train)\n",
+        "    loss_test = loss_fnc(y_test, t_test)\n",
+        "    record_loss_train.append(loss_train.item())\n",
+        "    record_loss_test.append(loss_test.item())\n",
+        "\n",
+        "    loss_train.backward()\n",
+        "\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    if i % 100 == 0:\n",
+        "        print(f\"Epoch: {i}, Loss_Train: {loss_train}, Loss_Test: {loss_test}\")\n",
+        "\n",
+        "plt.plot(range(len(record_loss_train)), record_loss_train, label=\"Train\")\n",
+        "plt.plot(range(len(record_loss_test)), record_loss_test, label=\"Test\")\n",
+        "plt.legend()\n",
+        "\n",
+        "plt.xlabel(\"Epochs\")\n",
+        "plt.ylabel(\"Error\")\n",
+        "plt.show()\n",
+        "\n",
+        "y_test = net(x_test)\n",
+        "count = (y_test.argmax(1) == t_test).sum().item()\n",
+        "print(f\"correct rate: {count/len(y_test)*100}%\")\n",
+        "\n",
+        "img_id = 0\n",
+        "x_pred = digit_images[img_id]\n",
+        "print(\"type\", type(x_pred))\n",
+        "image = x_pred.reshape(8, 8)\n",
+        "plt.imshow(image, cmap=\"Greys_r\")\n",
+        "plt.show()\n",
+        "\n",
+        "x_pred = torch.tensor(x_pred, dtype=torch.float32)\n",
+        "y_pred = net(x_pred)\n",
+        "print(f\"answer: {labels[img_id]}, prediction: {y_pred.argmax().item()}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9GCFPhryU2LI"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
